# pamacy

./: .env  Cargo.toml
migrations/: 20220429010542_pamacy.sql
src/: main.rs
templates/: index.html
